[gd_scene load_steps=4 format=3 uid="uid://dvfnhprtexx2n"]

[ext_resource type="Script" path="res://scenes/third_prostitution.gd" id="1_upgqw"]
[ext_resource type="Texture2D" uid="uid://dl8u2hk4yiw3a" path="res://assets/img/vesper_face.png" id="2_y6ody"]
[ext_resource type="PackedScene" uid="uid://728fnim4yyl8" path="res://scenes/dialogue_label.tscn" id="3_d11ct"]

[node name="ThirdProstitution" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_upgqw")

[node name="SceneBg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialogBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.0
offset_top = -338.0
offset_right = -219.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharPortrait" type="TextureRect" parent="DialogBox"]
visible = false
layout_mode = 0
offset_left = -178.0
offset_top = -79.0
offset_right = 166.0
offset_bottom = 303.0
texture = ExtResource("2_y6ody")
expand_mode = 1

[node name="DialogueLabel" parent="DialogBox" instance=ExtResource("3_d11ct")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 21.0
offset_right = -55.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Type here"
messages = Array[String](["Vesper: The red light district can be a dangerous place, but for me, it has been nothing but an all-you-can-eat buffet.", "Vesper: I’m not being too fair to my clients. Most of them are just poor sobs who want to have some fun.", "Vesper: I'm not going to deny it any longer, I want them to touch me, to look at me.", "Vesper: That’s why today I decided to wear something lighter, more revealing. ", "Vesper: Besides, a bra only gets in the way in this line of work and I'll just end up taking it off anyway.", "Vesper: It’s been such a long time since I've worn a skirt, now’s the best chance I’ll get.", "Vesper: I don’t want people to get suspicious, I’ve been coming here rather frequently. Someone might start noticing if I don’t dress myself accordingly.", "Ignoring that it’s just an excuse you’re telling yourself to be naughtier, you begin searching for your next client.", "Today you’re not feeling like choosing too much, you’ve sucked a few people and in the end, they all tasted the same, minus the alcohol running through their veins.", "Vesper: It’s not about the quality, but the quantity they can provide.", "Vesper: So maybe today I should go for someone bigger, the tallest the better.", "Fortunately, a very tall bald man approaches and grabs your ass, hard.", "As if expecting a slap he flinches when you turn around. ", "But to his surprise, you give him a smile and let him keep rubbing your butt.", "Bald Man: My god, I’m the luckiest man alive. ", "Bald Man: Seeing you from behind I thought your body was amazing, but you’re also as pretty as one of them TV models.", "Vesper: I like men with attitude. Do you also have the money to back that up?", "You brush away his hand from your butt to let him know you mean business.", "Bald Man: I certainly do! I wasn’t planning on spending it all in one place, though.", "Vesper: Well, you’ve already tasted the merchandise, now you’ve gotta buy it too.", "You purposely let a strap of your blouse slip down slowly, laying bare your pale shoulder reflected by the moonlight.", "Bald Man: Ahw, shucks. You only live once, huh? Alright, you can have it. But I want the full experience.", "Vesper: Oh, you won’t regret it, big boy.", "He happily follows you to a dark alley, his enormous hand groping your buttocks.", "You’re sure this one is going to give you more trouble, but you don’t want to raise any alarm, if you do this right he’ll let his guard down like all the others.", "Plus, you think he’s a jerk. You’ll gladly suck him dry once this is over.", "He finds an old sofa chair lying around, it seems to have been left here by some junkies, judging by a bunch of used syringes scattered about and a few drops of blood.", "The sight of blood thrills you, you can’t stop thinking about slurping this huge man’s blood down your throat.", "He notices your delighted expression.", "Bald Man: I love a slut with a beautiful smile. Well then, sit on my lap, I wanna feel you from behind.", "This is going to make things harder for you, but you don’t have a choice. ", "You do as he says and sit on his lap.", "The man lets out a huge smile showing his crooked teeth.", "He immediately pulls your blouse to the side, revealing your tits. ", "He starts pinching your nipples as hard as he can.", "Vesper: Yes! Pinch my titties! Harder please!", "Bald Man: You’re such a slut.", "He pulls your nipples so hard you don’t know how they’re still in place. ", "Vesper: AAAAaaaaaahh! You’re going to rip my nipples apart like that!", "Bald Man: I paid for you, you’re my bitch. I’ll do whatever I want with you.", "Next, he takes a hand off your tits and pulls your hair firmly, tilting your head backward.", "He starts licking the side of your lips searching for your tongue.", "You try to fight it the best you can.", "Vesper: Please, don’t. You may touch, but no kissing… ", "Vesper: Prostitutes don’t kiss their clients on the mouth.", "Vesper: Please…", "You try to close your mouth avoiding his kiss.", "But the urge to reciprocate is stronger. As his tongue touches yours you can’t resist and open your mouth, letting him.", "His tongue massages yours while he fondles your boobs softly.", "It’s awkward at first, kissing this giant stranger.", "But, it doesn’t feel bad, he tastes like old whisky, and you kind of like it.", "You’ve been kissing for a long time, you don’t want him to stop. ", "He lets go of your hair, but you continue kissing him, searching for his tongue.", "When you open your eyes he’s staring at you, proudly.", "Vesper: (This is getting out of hand, I'm losing control)", "You try to stand up, but he’s too powerful.", "He grabs you by the waist, rips your skirt, and sits you back on his lap.", "Vesper: (At least he didn’t rip my panties as well)", "You notice that his fly is unzipped, and you can guess by the size that he has an abnormally large member.", "It’s driving you insane. The more you try to break free, the more you feel him brushing against your inner thighs.", "You know if you really wanted to, you could rip this man’s throat open in an instant. But… you can’t stop moaning.", "He starts choking you softly, gaining your trust, as you finally stop resisting he chokes you harder and harder.", "His hands are so gigantic that he only needs one of them to dominate you completely.", "Concentrated on being choked you forgot he has full access to your crotch. ", "You’re used to clients rubbing your pussy over your panties so you open your legs as his left hand descends your stomach. ", "When he reaches your crotch he slides his hand down your panties, touching your wet pussy directly.", "Vesper: No! Not bellow my panties! ", "You scream, trying to break free from his grasp.", "Vesper: I only let clients touch me over my underwear.", "He starts by playing with your clitoris.", "Letting them touch you over your panties was one thing, but now he’s touching you directly.", "Ignoring your pleas he starts playing with your clitoris, choking you harder for resisting him. ", "He’s not going to stop just because you asked him, you’ve no choice but to let him rub you.", "Vesper: Just be gentle, please, my pussy’s sensitive.", "After all the choking you thought he would treat your pussy roughly, but for a brute, he sure knows how to handle your lady bits.", "From time to time he gathers the honey from your slit and smears it all over your clit, making it much more pleasant to the touch. ", "Vesper: AHHHHh… just like my titties, it feels much better beneath the clothes!", "Overwhelmed by desire you put your tiny hands inside his pants and start caressing his cock. He’s so big it makes your hands feel even tinier.", "Bald Man: How do you like my dick?", "Vesper: I never touched something this huge before.", "You have to stop, this has gone far away from your original plan.", "Whilst you tell yourself that, you know you’re free to go for a while now.", "The man stopped choking you when you started caressing his cock by your own volition.", "He knows he has you beaten. Your pussy feels so good you want to reciprocate.", "You’ve thrown your sanity out the window for a while now, your lust won’t let you stop moving your hips up and down, inviting his finger inside you.", "Lost in the moment you reach for his tongue.", "Kissing him as if he were the last man on earth.", "Every time you move you feel his index finger hitting your entrance.", "Aside from your own small fingers you never had something so big inside you. ", "You start to get nervous, but curious at the same time, imagining his cock inside you. ", "Vesper: (I’m so wet it might not even hurt)", "As you pull his enormous cock out  you're flabbergasted by his humongous size.", "Bald Man: Your pussy’s so tight I can’t get my finger inside you.", "Vesper: Your finger’s too thick, you’re gonna tear my hymen apart like that!", "Realizing you’re still a virgin makes the man so excited you can feel his member almost exploding from within his underpants. ", "Bald Man: A virgin prostitute? Today’s really my lucky day.", "Bald Man: I’ll play with your clit a little longer then. It’s not every day you get to deflower a virgin. ", "Vesper: Ahhhh! My clit’s feel so good.", "Vesper: I can’t take it anymore, let me see that huge cock!", "You pull his enormous cock out. ", "It’s so huge you can’t wrap your entire hand around it. ", "Vesper: You’re hung like a horse!", "Fascinated by his size, you start stroking his cock with both hands.", "Vesper: I wonder how much bigger you can get? ", "Vesper: I know this horse dick would kill me, but I can’t stop stroking it.", "Bald Man: I’ll fuck your brains out until you can’t walk straight.", "Vesper: It won’t fit! Your cock’s too big, you’re gonna kill me if you put it in.", "Bald Man: I don’t care, I paid for you, and I’m gonna fuck you. ", "Bald Man: Show me your pussy.", "Vesper: No, please. I haven't shown my pussy to anyone yet. ", "Vesper: You know I’m still a virgin.", "Bald Man: You say that while stroking my cock like crazy?", "Bald Man: Why don't you stop stroking it then?", "Vesper: But you're so big already if I stop now... you won't cum.", "Bald Man: Do you want to see me cumming?", "He softly pinches your hard clit.", "Vesper: Yes! I want to see how much this horse dick cums.", "Bald Man: Then keep stroking my huge cock and answer.", "Hypnotized you stare at his grotesquely huge cock while stroking it up and down.", "Up.", "And down.", "Bald Man: In exchange for my cum, what will you offer me?", "Vesper: I'll…", "Vesper: ... show you.", "Vesper: I'll show you......…", "Vesper: … my pussy.", "Bald Man: Say it again, louder! You whore!", "Vesper: I’ll show you my pussy! ", "As you say that he pulls your panties to the side, exposing your pinky pussy to the world.", "Bald Man: See? Wasn't that easy?", "You feel strange realizing you’re totally exposed, your tits hanging out, your pussy being spread open.", "But you can’t stop now, your only chance is to make him cum before he decides to fuck you. ", "Bald Man: Convince me you like to show your pussy and I’ll continue rubbing you, or else…", "Vesper: I want you to look at my wet pussy!", "Bald Man: Good.", "Bald Man: Now give me your best answers and I'll give you a big reward.", "Bald Man: What do you call someone that loves stroking stranger’s cocks?", "Vesper: Ahhhnn! A slut! ", "Bald Man: And why are you stroking my cock?", "Vesper: 'Cause I am a dirty slut that wants to see how much milk comes out of this huge cock!", "Bald Man: Good slut.", "Bald Man: Last question. Why do you have your tits and your pussy out?", "Vesper: 'Cause I want everyone to look at me!", "Bald Man: As a reward, I'm gonna fuck you now.", "You start to panic realizing he's about to impale you with his huge cock.", "Vesper: (My plan isn’t working, I have no other choice!)", "Vesper: Wait!", "You open your legs as wide as you can.", "Vesper: Finger my pussy first. Then you can fuck me all you want.", "Bald Man: Why should I? I can fuck you now if I want.", "Vesper: Look at my pussy, it’s too tight.", "Vesper: If you shove this big cock without stretching me first you'll break your little toy.", "Vesper: Isn't it more fun if your slut cooperates?", "Vesper: Don't you want to feel my hymen stretching with your fingers first?", "Vesper: To feel me becoming more and more loose each time you finger my tiny hole?", "Bald Man: Now that you put it like that…", "Vesper: Finger this dirty slut then!", "Vesper: Yes! Fuck my pussy!", "Vesper: Fuck my pussy while I idolize this monster cock!", "You can see your plan is working.", "Every time his finger hits your hymen you feel his cock getting harder in your hand.", "Vesper: Yes!!!! Go all the way up my womb! Poke me with those fingers, please!", "Bald Man: ArrrGhh!", "You can feel, it’s almost coming, he just needs a little push!", "Vesper: Cum for me! I know you want it, cum thinking those fingers are your huge cock inside me.", "With your last words, you realize the volcano is about to erupt.", "You smile triumphantly, you've finally won.", "However… you couldn’t anticipate what he would do next.", "Bald Man: I’m coming in that pussy. ", "Vesper: No! Please, DON’T!", "Bald Man: Whether you like it or not.", "He picks you up and changes positions, squashing your tits together.", "Your nipples are so erect they look like two small cannons.", "He then sits you on his enormous cock. ", "His head on the entrance of your pussy trying to force his way in.", "Fortunately, you’re still tight enough to prevent him.", "But not strong enough to avoid him cumming all over your pussy.", "Vesper: Now’s my only chance! ", "You bite his neck as hard as you can. ", "He still fights you, like nothing is happening, trying to put his cock inside.", "But soon his dick starts to become limper between your crotch.", "Vesper: It’s finally over…", "Vesper: Even though it’s getting softer, it’s still huge…", "Vesper: This was a close call.", "Vesper: I tried to bite more than I could handle.", "Vesper: Why did I pick such a giant in the first place? ", "Vesper: What was I expecting? I knew not all clients would be as sweet as Josh.", "Vesper: I was so sure of myself, but this serves to remind me that I’m still just an inexperienced prostitute.", "Vesper: Is he dead?", "Vesper: No… I can still hear his heart beating, even though it’s very weak.", "Vesper: Well, serves you right. I should kill you for what you did.", "Vesper: But I don’t want to cause any commotion. ", "Vesper: I’m sure a lot of people would remember me walking this way with a giant.", "You clean your pussy full of his cum with your skirt and pull your clothes back to normal.  ", "Vesper: My pussy is still throbbing from all his fingering.", "You start remembering his big cock in your hands… ", "Vesper: He came all over my pussy...", "Vesper: Ahh… it felt so good, I want more… ", "Vesper: I want to cum too…", "You leave for home thinking about taking a cold shower.", "-- END OF PROSTITUTION C ---", "-- START OF REPETITION C --", "Once again you find your way back into the red-light district.", "You’re not even that picky anymore, short, tall, fat, slim, ugly… if they seem like easy prey, you’ll let them have their way with you.", "You’re standing in your normal spot when a familiar face approaches you.", "Heavy man: Hello, I’ve been looking for you for quite some time.", "Vesper: Oh, really? ", "Heavy Man: Yes.", "Vesper: And why is that?", "Just when you think he’s going to accuse you of something he says:", "Heavy Man: I wanted to apologize. I don’t remember much, but I think I passed out on you.", "Heavy: I have low blood sugar, diabetes, and all… it sucks. So it happens from time to time. ", "Plus the depression, I’ve always been mistreated my whole life because of my weight.", "Heavy Man: I’m happy you picked me amongst the crowd, even if it was for the money. A guy like me, with a girl like you? Only happens in the movies.", "Vesper: Oh, poor thing. I can’t do much for your health, but I can make you happier. ", "Vesper: What’s your name?", "Doug: It’s Doug.", "Vesper: Doug, you know I’m a prostitute, can you pay for my services?", "Doug: Here, take everything I have, I came prepared in case I found you again.", "He hands you his wallet.  ", "Vesper: Alright, kiss me Doug.", "You kiss him, your tongues entwined for a long time.", "Doug: You taste so good, I’m a very lucky man.", "Vesper: I’m glad you think that.", "Doug: I didn’t get to see these titties before.", "Doug: They're so beautiful.", "You pull his head to your tits.", "Vesper: You can do more than touch them.", "Doug: Ah, your nipples taste wonderful, too.", "Vesper: Ah, Doug, you’re the first to suck them, you know?", "Doug: Really!?", "Doug: I was never the first in anything.", "Vesper: I’m very shy, I've never let anyone suck them.", "Vesper: Until you came along. I like you so much I want to feel your tongue on my nipples.", "Doug: I like you even more!!!  ", "Doug: You have the most beautiful tits in the whole world, I can’t believe I’m the first! ", "Vesper: You sure are. Your tongue feels great, suck them all you want.", "Vesper: What is this huge thing brushing against my thighs, Doug?", "Having your tits sucked feels so good you pull his cock out and start stroking it.", "Vesper: What a thick cock you’ve been hiding there.", "Vesper: Are you this hard because of my tits?", "Doug: Arghh, your nipples are so hard and tasty I can’t help it. ", "Doug: Can I spank you again?", "Vesper: I was thinking of something else today… last time you didn’t even see me naked, did you?", "Doug: No!", "You turn your back to him and start taking your panties off.", "Vesper: Then to make up for it…", "Vesper: How would you like to play with my pussy?", "Doug’s at a loss for words, he can’t believe what his eyes are seeing.", "Doug: I think I’m going to faint.", "Vesper: Not yet, Doug. I want you to finger me first.", "Vesper: Sit down and take off your pants, I want to stroke that fat cock too.", "You sit down beside Doug spreading your legs wide, his cock already hard in your hand.", "Vesper: Look at my pussy, Doug. ", "Doug: Your pussy’s so pretty, it’s so pink and tiny.  ", "Doug: Ahh, and your hand’s so soft. ", "Vesper: Did anyone ever tell you how large your cock is Doug?", "Vesper: Look. I can’t even wrap my hand around it.", "Doug: You really think so? ", "Doug: I was never popular with women. ", "Doug: Being short and fat.", "Vesper: You should be more confident.", "Vesper: A cock like this can satisfy any woman.", "Vesper: Look how wet I am just by stroking it.  ", "He starts to explore your pussy with his finger.", "Vesper: Yes, that’s it Doug, play with my pussy.", "Doug: Your pussy’s too tight, I can feel it resisting my finger.  ", "Vesper: I’m still a virgin, Doug.", "Doug: I’m touching a virgin!?", "Vesper: Can’t you feel my hymen wrapping around your finger?", "Vesper: Come, take my virginity with your finger, this pussy is all yours.", "Doug’s finger goes all the way in.", "Vesper: AAaahh, you took my virginity, Doug.", "Vesper: Do you still think you’re a loser?", "Doug: No! I’m the luckiest man alive.", "Vesper: I saved it for you, don’t you feel special?", "Doug: Yes!!! I won’t complain about my weight or looks ever again!", "Vesper: Tell me how pretty I am while you tear my hymen.", "Doug: You’re the prettiest woman I’ve ever seen in my life!", "Doug: I’d sell my house and the clothes on my back to be with you.", "Vesper: You don’t need to do that Doug, stroking this fat cock here is reward enough. ", "Doug: I want to go deeper!", "Doug lifts your leg up high and starts licking your nipple. His cock harder than ever.", "Vesper: I can feel your finger hitting my womb! I’m going crazy, Doug!", "Vesper: It feels so good!", "Doug: You’re not lying, you’re all wet! ", "Doug: I can feel it, you’re really enjoying me poking your womb. ", "Vesper: I’m loving it! This is paradise!!!", "Doug: What if I put one more...", "Doug shoves another finger inside you.", "You let out a cry of pain and pleasure.", "Vesper: Ahhhhh, my pussy can’t take it, Doug. It’s too much! You’re ripping me apart!", "Vesper: But don’t stop, stretch me all you want!", "Doug: How do you like my fat fingers? ", "Doug: I bet my fingers are much larger than most cocks.", "Vesper: They’re much larger! And they feel excellent!", "Doug: Say goodbye to what’s left of your hymen.", "Vesper: Bye-bye hymen!  ", "Doug: If only my friends in high school could see me now.", "Doug: If they could see fatso Doug Daniels MacCready deep inside your pussy!", "Vesper: Don’t worry, I’m going to tell everyone!", "Vesper: That Doug Daniels MacCready took my virginity!", "Doug: AHhhhHHH! Your pussy’s too good.", "Doug: I can’t take it anymore, I’m going to cum!", "Vesper: Cum in my face! I want to drink your hot milk!", "You get in position, open your mouth, and stick out your tongue.", "Doug: You’re so pretty, I’m going to cum all over you! ", "Doug: UUGHhgh!", "He cums so much, even your hair is full of jizz.", "You drink some of his cum.", "Vesper: Your cum tastes wonderful. ", "Vesper: My pussy’s so stretched now… ", "Vesper: Do you want to put your fat cock in me?", "Doug: My fat cock inside... I don’t feel so well…", "He hits the floor", "Vesper: Well, this is a first… and rather convenient, I guess.", "Vesper: He’s already out. I’m sure he wouldn’t mind.", "You bite his neck, trying not to drink too much of his blood.", "Vesper: Sleep well, Doug. ", "You clean yourself up, pull your panties back up, and leave him lying on the floor. ", "-- END OF REPETITION C --"])

[node name="NamePanel" type="Panel" parent="DialogBox"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -197.0
offset_right = -1132.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="DialogBox/NamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Vesper"
horizontal_alignment = 1
vertical_alignment = 1
